# technopark_c_c_plus_plus

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflow/: ci.yml
.github/workflows/: ci.yml
delete_matrix_rows_and_cols_with_zero/: CMakeLists.txt  delete_matrix_rows_and_cols_with_zero.c  delete_matrix_rows_and_cols_with_zero.h  errors_handler.c
search_max_sequence/: search_max_sequence.c  search_max_sequence.h
search_max_sequence_implementation/: search_max_sequence_implementation.c  search_max_sequence_implementation.h
search_max_sequence_multiple_threads/: CMakeLists.txt  error_handler.c  file_handler.c  search_max_sequence.c  search_max_sequence.h  search_max_sequence_multi_thread.c  search_max_sequence_multi_thread.h
search_max_sequence_multiple_threads/search_max_sequence_implementation/: search_max_sequence_implementation.c  search_max_sequence_implementation.h
search_max_sequence_single_thread/: CMakeLists.txt  error_handler.c  file_handler.c  search_max_sequence.c  search_max_sequence.h  search_max_sequence_single_thread.c  search_max_sequence_single_thread.h
search_max_sequence_single_thread/search_max_sequence_implementation/: search_max_sequence_implementation.c  search_max_sequence_implementation.h
tests/: CMakeLists.txt  tests_delete_matrix.cpp  tests_search_max_sequence.cpp
tests/tests_sample/: testBasic2.txt
