cmake_minimum_required(VERSION 3.0.0)
project(delete_matrix_lib)

set(DELETE_MATRIX_LIB_LIBRARIES)
set(DELETE_MATRIX_LIB_INCLUDE_DIRS)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(DELETE_MATRIX_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(DELETE_MATRIX_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
